<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginVertical="20dp"
    android:layout_marginEnd="30dp"
    android:layout_marginStart="10dp"
    tools:context=".CreateNewToDoList">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelTite"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:labelFor="@id/textInputTitle"
        />


    <EditText
        android:id="@+id/textInputTitle"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_border_black"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:autofillHints="title"
        android:inputType="text"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelStatus"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:labelFor="@id/textInputStatus"
        />


    <EditText
        android:id="@+id/textInputStatus"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_border_black"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:autofillHints="status"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelContent"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:labelFor="@id/textInputContent"
        />


    <EditText
        android:id="@+id/textInputContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_border_black"
        android:layout_marginBottom="20dp"
        android:padding="2dp"
        android:lines="5"
        android:gravity="top"
        android:autofillHints="content"
        android:inputType="textMultiLine"
        />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
    />

</LinearLayout>